updated cv file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>🌸Hattie's Personal Site</title>
+  <title>♠️Hattie's Personal Site</title>
 </head>
 
 <body style="background-color: #82c4c3;">
@@ -56,10 +56,13 @@
     <tr>
       <td>SQL</td>
       <td>⭐⭐⭐</td>
-      <td>HTML</td><td>⭐⭐⭐</td>
+      <td>HTML</td><td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>CSS</td><td>⭐⭐⭐</td><td>JavaScript</td><td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Selenium</td><td>⭐⭐⭐⭐</td><td>JMeter</td><td>⭐⭐⭐</td>
     </tr>
   </table>
   <hr>
