--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
   <form action=""></form>
   <h2>My Contact Details</h2>
   <p>Email: hattieqn@gmail.com</p>
-  <p>Address: 309 Lakeview Ave, Haddonfield NJ 08033</p>
+  <p>Address: Haddonfield NJ 08033</p>
   <p>Phone: 856-834-042</p>
   <hr>
 
