--- a/Contact.html
+++ b/Contact.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+  <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 
-<body style="background-color: #82c4c3;">
+<body>
   <form action=""></form>
   <h2>My Contact Details</h2>
   <p>Email: hattieqn@gmail.com</p>
